# OZ_BE_-

./: .gitignore  .gitmodules  README.md
10_Operating_System/: .gitignore
10_Operating_System/appendix/: 30.py  31.py  32.py
10_Operating_System/day1/: 01.py  README.md
10_Operating_System/day2/: 02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  README.md
10_Operating_System/day3/: 12.py  13.py  14.py  15.py  16.py  README.md
10_Operating_System/day4/: 17.py  18.js  19.py  (+4 more)
3_mini_project_admin_page/: README.md
4_admin_page_project/: README.md  index.html  style.css
7_Flask/: .gitignore
7_mini_project_webscraping/: .gitignore  app.py
8_Django/: .gitignore  1_data_analysis.ipynb  2_oz_machine_learning.ipynb
8_Django/django_class/: pyproject.toml
8_Django/django_class/boards/: admin.py  models.py
8_Django/django_class/boards/migrations/: 0001_initial.py  0002_initial.py  0003_alter_board_writer.py  0004_alter_board_writer.py  0005_alter_board_writer.py  0006_alter_board_writer.py
8_Django/django_class/config/: authentication.py  settings.py  urls.py
8_Django/django_class/feeds/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
8_Django/django_class/feeds/migrations/: 0001_initial.py
8_Django/django_class/reviews/: models.py  serializers.py  tests.py  urls.py  views.py
8_Django/django_class/reviews/migrations/: 0001_initial.py
8_Django/django_class/users/: admin.py  models.py  serializers.py  urls.py  views.py
8_Django/django_class/users/migrations/: 0001_initial.py
Admin_page/: index.html  style.css
(+62 files in other folders)
